[tool.poetry]
name = "raycasting-doom"
version = "0.1.0"
description = "Doom-like minigame made using raycasting technique and Pygame"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
